2012-06-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): Add the new file updmap.help2man.

2012-06-01  Karl Berry  <karl@tug.org>

	* Makefile.am (xupdmap.man): new (phony) target to run help2man.
	* updmap.help2man: new file.

	* updmap.pl: consistently use $prg, and remove .pl suffix.

2012-05-31  Karl Berry  <karl@tug.org>

	* updmap.pl (reset_root_home): accept /var/root.

2012-05-31  Norbert Preining  <preining@logic.at>

	* updmap.pl: reset root $HOME if it is not the real one, since
	sudo does not reset it

2012-05-21  Norbert Preining  <preining@logic.at>

	* updmap.pl
	  . on win32, ensure file names are in lower case 
	  . add --dvipdfmxoutputdir, make --dvipdfmoutputdir synonym
	    (more or less)
	  . make sure that the file name database is properly updated
	    when creating a new config file
	  . remove --old-mode cmd line option

2012-05-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* updmap.pl: Moved from  ../texlive/linked_scripts/texlive/
	back to here.
	* tests/ (new): Moved from ../texlive/ to here and adapted.
	* Makefile.am: Adapted.

2012-05-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ (removed): Moved from here to ../texlive/.
	* Makefile.am: Adapted.

	* fmtutil.cnf: Updated from Master.

2012-05-14  Norbert Preining  <preining@logic.at>

	* updmap.pl: rename to updmap-single.pl, we ship updmap.pl now
	via ../texlive/linked_scripts/texlive/updmap.pl

2012-04-10  Karl Berry  <karl@tug.org>

	* fmtutil (main): eradicate double slashes in tmpdir.
	tex-k mail from Alexey Vikhlinin, 8 Apr 2012 17:32:02.

2012-03-12  Karl Berry  <karl@tug.org>

	* updmap.cfg.5: avoid ... at beginning of line.
	Replace Debian-specific text.

2012-02-21  Karl Berry  <karl@tug.org>

	* updmap.pl (help): updates for kanji.

2012-02-10  Norbert Preining  <preining@logic.at>

	* updmap.pl: fix breakage of updmap if a generated file does
	not exist (wrong double substitution of @kanji*@ strings)
